<resources>
    <string name="app_name">Kitching</string>
    <string name="openDrawer">open</string>
    <string name="closeDrawer">close</string>
    <string name="teamListTitle">팀 리스트</string>
    <string name="createTeamTitle">팀 생성</string>
    <string name="confirm">확인</string>
    <string name="cancel">취소</string>
    <string name="noticeTitleHint">공지사항 제목</string>
    <string name="noticeContentHint">공지사항 내용</string>
    <string name="add">추가</string>
    <string name="name">이름</string>
    <string name="timeNameHint">타임명 입력</string>
    <string name="startTime">시작시간</string>
    <string name="endTime">종료시간</string>
    <string name="recipeHint">레시피</string>
    <string name="textInputHint">힌트</string>
    <string name="send">전송하기</string>
    <string name="orderCategory">대분류</string>
    <string name="orderItem">제품</string>
    <string name="manager">관리자</string>
    <string name="inviteCode">초대코드</string>
    <string name="recipe">레시피</string>
    <string name="menu">메뉴</string>
    <string name="ingredients">재료</string>
    <string name="once">1x</string>
    <string name="twice">2x</string>
    <string name="category">카테고리</string>
    <string name="prep">할 일</string>
    <string name="scheduleDepartmentPeople">확정 근무인원 총 %1$d명</string>
    <string name="nextDateBtnDescription">다음 날짜 버튼</string>
    <string name="prevDateBtnDescription">이전 날짜 버튼</string>
    <string name="staffLevel">직급</string>
</resources>