<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/dialogDefault"
    android:layout_height="wrap_content">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/noticeTitleTI"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/noticeTitleHint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/noticeContentTI"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/noticeContentHint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/noticeTitleTI">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="@dimen/dialogNoticeContentHeight" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/confirmBtn"
        style="@style/dialogConfirmBtn"
        android:layout_weight="1"
        android:text="@string/add"
        app:layout_constraintEnd_toStartOf="@id/cancelBtn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/noticeContentTI" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/cancelBtn"
        style="@style/dialogCancelBtn"
        android:layout_weight="1"
        android:text="@string/cancel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/confirmBtn"
        app:layout_constraintTop_toBottomOf="@+id/noticeContentTI" />

</androidx.constraintlayout.widget.ConstraintLayout>