<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/dialogDefault"
    android:layout_height="wrap_content"
    >

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/scheduleTimeNameTIL"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/timeNameHint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/scheduleTimeNameTI"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/startTimeTV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/padding_S"
        android:text="@string/startTime"
        android:textSize="@dimen/text_M"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scheduleTimeNameTIL" />

    <TimePicker
        android:id="@+id/startTimeTP"
        style="@style/ThemeOverlay.Material3.MaterialTimePicker.Display.TextInputEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:timePickerMode="spinner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/startTimeTV" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/endTimeTV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/padding_S"
        android:text="@string/endTime"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/startTimeTP"/>

    <TimePicker
        android:id="@+id/endTimeTP"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:timePickerMode="spinner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/endTimeTV" />

    <RadioGroup
        android:id="@+id/colorPickerRG"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/endTimeTP"
        app:layout_constraintBottom_toTopOf="@+id/confirmBtn">
    </RadioGroup>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/confirmBtn"
        style="@style/dialogConfirmBtn"
        android:layout_weight="1"
        android:text="@string/add"
        app:layout_constraintEnd_toStartOf="@id/cancelBtn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/colorPickerRG" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/cancelBtn"
        style="@style/dialogCancelBtn"
        android:layout_weight="1"
        android:text="@string/cancel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/confirmBtn"
        app:layout_constraintTop_toBottomOf="@+id/colorPickerRG" />

</androidx.constraintlayout.widget.ConstraintLayout>